# kaleidoscope

./: .gitignore  Cargo.toml  README.md  bench.md  flake.nix
src/: format.rs  lib.rs  main.rs  ui.rs
src/algo/: diff.rs
src/circ/: .sequence.rs.swo  sequence.rs
src/circuit/: sequence.rs
src/format/: openqasm.rs
src/ui/: circuit.rs  (+4 more)
test_files/: dj_mapped_ibm_montreal_qiskit_opt0_2.qasm  dj_mapped_ibm_montreal_qiskit_opt0_3.qasm  dj_mapped_ibm_montreal_qiskit_opt0_4.qasm  dj_mapped_ibm_montreal_qiskit_opt3_2.qasm  dj_mapped_ibm_montreal_qiskit_opt3_3.qasm  dj_mapped_ibm_montreal_qiskit_opt3_4.qasm  dj_nativegates_ibm_qiskit_opt0_2.qasm  dj_nativegates_ibm_qiskit_opt0_3.qasm  dj_nativegates_ibm_qiskit_opt0_4.qasm  dj_nativegates_ibm_qiskit_opt3_2.qasm  dj_nativegates_ibm_qiskit_opt3_3.qasm  dj_nativegates_ibm_qiskit_opt3_4.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt0_2.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt0_3.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt0_4.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt3_2.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt3_3.qasm  grover-noancilla_mapped_ibm_montreal_qiskit_opt3_4.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_2.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_3.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_4.qasm  grover-noancilla_nativegates_ibm_qiskit_opt3_3.qasm  grover-noancilla_nativegates_ibm_qiskit_opt3_4.qasm  qft_nativegates_ibm_qiskit_opt0_5.qasm  shor_15_4_indep_qiskit_18.qasm  shor_9_4_indep_qiskit_18.qasm  swap.qasm
tests/: circuit_diff.rs
