[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking"] }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
winit = { version = "0.27.2", features = ["x11"] }
glium = "0.32"
